Implement user invitation
